Merge jmeter latest and fixes