@@ -22,8 +22,8 @@ import java.io.File;
 import java.io.FileInputStream;
 import java.io.FileNotFoundException;
 import java.io.IOException;
-import java.io.InputStream;
 import java.nio.charset.Charset;
+import java.nio.file.Files;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Properties;
@@ -43,12 +43,11 @@ import javax.mail.internet.MimeMessage;
 import javax.mail.internet.MimeMultipart;
 import javax.net.ssl.SSLContext;
 
-import org.apache.commons.io.IOUtils;
-import org.apache.commons.lang3.StringUtils;
 import org.apache.jmeter.config.Argument;
 import org.apache.jmeter.services.FileServer;
 import org.apache.jmeter.testelement.property.CollectionProperty;
 import org.apache.jmeter.util.TrustAllSSLSocketFactory;
+import org.apache.jorphan.util.StringUtilities;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -66,7 +65,7 @@ public class SendMailCommand {
 
     // Use the actual class so the name must be correct.
     private static final String TRUST_ALL_SOCKET_FACTORY = TrustAllSSLSocketFactory.class.getName();
-    private static final String FALSE = Boolean.FALSE.toString();
+    private static final String FALSE = "false";
 
     private boolean useSSL = false;
     private boolean useStartTLS = false;
@@ -182,13 +181,10 @@ public class SendMailCommand {
             Multipart multipart = new MimeMultipart();
             final int attachmentCount = attachments.size();
             if (plainBody &&
-               (attachmentCount == 0 ||  (mailBody.length() == 0 && attachmentCount == 1))) {
+               (attachmentCount == 0 ||  (mailBody.isEmpty() && attachmentCount == 1))) {
                 if (attachmentCount == 1) { // i.e. mailBody is empty
                     File first = attachments.get(0);
-                    try (FileInputStream fis = new FileInputStream(first);
-                            InputStream is = new BufferedInputStream(fis)){
-                        message.setText(IOUtils.toString(is, Charset.defaultCharset()));
-                    }
+                    message.setText(Files.readString(first.toPath(), Charset.defaultCharset()));
                 } else {
                     message.setText(mailBody);
                 }
@@ -282,10 +278,9 @@ public class SendMailCommand {
     void configureTLSProtocols(Properties props, String protocol) {
         String tlsProtocolsToUse = getTlsProtocolsToUse();
         if (useStartTLS || useSSL) {
-            if (StringUtils.isEmpty(tlsProtocolsToUse)) {
+            if (StringUtilities.isEmpty(tlsProtocolsToUse)) {
                 try {
-                    tlsProtocolsToUse = StringUtils.join(
-                        SSLContext.getDefault().getSupportedSSLParameters().getProtocols(), " ");
+                    tlsProtocolsToUse = String.join(" ", SSLContext.getDefault().getSupportedSSLParameters().getProtocols());
                 } catch (Exception e) {
                     logger.error("Problem setting ssl/tls protocols for mail", e);
                 }
@@ -759,7 +754,7 @@ public class SendMailCommand {
      */
     private String getPort() {
         String port = smtpPort.trim();
-        if (port.length() > 0) { // OK, it has been supplied
+        if (!port.isEmpty()) { // OK, it has been supplied
             return port;
         }
         if (useSSL){
@@ -786,7 +781,7 @@ public class SendMailCommand {
      */
     public String getTimeout() {
         String timeout = timeOut.trim();
-        if (timeout.length() > 0) { // OK, it has been supplied
+        if (!timeout.isEmpty()) { // OK, it has been supplied
             return timeout;
         }
         return "0"; // Default is infinite timeout (value 0).
@@ -807,7 +802,7 @@ public class SendMailCommand {
      */
     public String getConnectionTimeout() {
         String connectionTimeout = connectionTimeOut.trim();
-        if (connectionTimeout.length() > 0) { // OK, it has been supplied
+        if (!connectionTimeout.isEmpty()) { // OK, it has been supplied
             return connectionTimeout;
         }
         return "0"; // Default is infinite timeout (value 0).
